--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "require": {
         "php": "~7.1.3||~7.2.0",
         "magento/framework": "*",
-        "magento/module-msi-source-stock-sample-data":"*"
+        "magento/module-msi-source-stock-sample-data":"*",
+        "magento/module-catalog-sample-data":"*"
     },
     "type": "magento2-module",
     "license": [
