--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
-    "name": "magento/module-msi-inventory-sample-data-luma",
+    "name": "magento/module-msi-inventory-sample-data-ref",
     "description": "N/A",
     "require": {
         "php": "~7.1.3||~7.2.0",
         "magento/framework": "*",
         "magento/module-catalog-sample-data":"*",
+        "magento/module-configurable-sample-data":"*",
         "magento/module-msi-inventory-sample-data":"*",
         "magento/module-msi-source-stock-sample-data":"*"
     },
@@ -18,7 +19,7 @@
             "registration.php"
         ],
         "psr-4": {
-            "Magento\\MsiInventorySampleDataLuma\\": ""
+            "Magento\\MsiInventorySampleDataRef\\": ""
         }
     }
 }
